# BluetoothSMS-PC

./: .gitignore  CMakeLists.txt  README  Readme.md
gui-src/: BlueDevice.cpp  BlueFrame.cpp  Main.cpp
include/: Contact.h  ContactContainer.h  Message.h  MessageThread.h  appstrings.h  bsms.h
include/gui/: BlueDevice.h  BlueFrame.h  ContactsListBox.h  ContactsListView.h  DeviceDialog.h  DevicePanel.h  Main.h  MainApp.h  MainFrame.h  MessageGroupPanel.h  MessagePanel.h  MessageThreadsPanel.h  MessagesPanel.h  SearchableItemInterface.h
src/: Contact.cpp  ContactContainer.cpp  Message.cpp  MessageThread.cpp
src/gui/: BlueDevice.cpp  BlueDevice.h  BlueFrame.cpp  CMakeLists.txt  ContactsListBox.cpp  ContactsListView.cpp  DeviceDialog.cpp  DevicePanel.cpp  Main.cpp  Main.h  MainApp.cpp  MainFrame.cpp  MessageGroupPanel.cpp  MessagePanel.cpp  MessageThreadsPanel.cpp  MessagesPanel.cpp  cmake-how.txt  defines.h
